# osmelevation

./: CMakeLists.txt  Dockerfile  README.md  cpplint.py
cmake/: FindLibZip.cmake  FindOsmium.cmake  FindProtozero.cmake  cpplint.cmake
src/: CorrectOsmElevationMain.cpp  OsmElevationMain.cpp
src/correctosmelevation/correct/: CMakeLists.txt  CorrectRiver.cpp  CorrectRiver.h  CorrectRoute.cpp  CorrectRoute.h  CorrectTunnelOrBridge.cpp  CorrectTunnelOrBridge.h  SmoothRoute.cpp  SmoothRoute.h
src/correctosmelevation/osm/: CMakeLists.txt  CorrectElevation.cpp  CorrectElevation.h  FindTunnelsAndBridges.cpp  FindTunnelsAndBridges.h  OsmNodesHandler.cpp  OsmNodesHandler.h  OsmRelationsManager.cpp  OsmRelationsManager.h  OsmRoutesRange.cpp  OsmRoutesRange.h  OsmWaysHandler.cpp  OsmWaysHandler.h  ProcessRouteRelation.cpp  ProcessRouteRelation.h  RoutesFromRelations.cpp  RoutesFromRelations.h  RoutesFromWays.cpp  RoutesFromWays.h
src/global/: Constants.h
src/osmelevation/elevation/: CMakeLists.txt  GeoElevation.cpp  GeoElevation.h  NasademFile.cpp  NasademFile.h  NasademFileName.cpp  NasademFileName.h
src/osmelevation/osm/: CMakeLists.txt  GeoBoundaries.cpp  GeoBoundaries.h  GeoPartition.cpp  GeoPartition.h  OsmNodesHandler.cpp  OsmNodesHandler.h
src/parser/: CMakeLists.txt  NodeParser.cpp  NodeParser.h  NodeWayRelationParser.cpp  NodeWayRelationParser.h  OsmHandler.cpp  OsmHandler.h  RelationParser.cpp  RelationParser.h  WayParser.cpp  WayParser.h
src/util/: CMakeLists.txt
src/util/console/: Console.cpp  Console.h
src/util/geo/: Geo.h  Point.h
src/util/geometry/: Vector3d.h
src/util/graph/: Edge.h  Graph.cpp  Graph.h
src/util/index/: AverageElevationIndexSparse.cpp  AverageElevationIndexSparse.h  ElevationIndex.cpp  ElevationIndex.h  ElevationIndexDense.cpp  ElevationIndexDense.h  ElevationIndexSparse.cpp  ElevationIndexSparse.h  IdElevation.h  IdElevationAverage.h  NodeIndex.cpp  NodeIndex.h
src/util/osm/: GetOsmStats.cpp  GetOsmStats.h  Node.h  OsmStats.h  Way.h
src/writer/: AddElevationTags.cpp  AddElevationTags.h  CMakeLists.txt  OsmAddElevationWriter.cpp  OsmAddElevationWriter.h
test/: AverageElevationIndexSparseTest.cpp  CMakeLists.txt  CorrectElevationTest.cpp  CorrectRiverTest.cpp  CorrectTunnelOrBridgeTest.cpp  ElevationIndexDenseTest.cpp  ElevationIndexSparseTest.cpp  ElevationsInTileTest.cpp  GeoElevationTest.cpp  GeoTilesTest.cpp  GraphTest.cpp  NasademFileNameTest.cpp  NasademFileTest.cpp  RoutesFromRelationsTest.cpp  RoutesFromWaysTest.cpp  SmaTest.cpp  SmoothRouteTest.cpp  UtilTests.cpp
test/test_files/: testMap.osm
